# WaterDropEngine

./: .gitignore  Cargo.toml  README.md  build.rs
core/core/ecs/: Cargo.toml
core/core/ecs/src/: component.rs  lib.rs  world.rs
core/core/ecs/src/components/: map.rs  mod.rs  render.rs  terrain.rs
core/core/editor/: Cargo.toml
core/core/editor/src/: editor.rs  editor_disabled.rs  lib.rs
core/core/editor/src/core/: editor_pass.rs  mod.rs  platform.rs  ui_tree.rs
core/core/editor/src/widgets/: mod.rs  properties.rs  resources.rs  widget.rs  world.rs
core/editor/: Cargo.toml
core/editor/src/: editor.rs  lib.rs
core/editor/src/core/: editor_pass.rs  platform.rs  ui_tree.rs
core/editor/src/widgets/: mod.rs  properties.rs  resources.rs  widget.rs  world.rs
core/game/: Cargo.toml
core/game/src/: app.rs  lib.rs  renderer.rs  scene.rs
core/game/src/components/: camera.rs  label.rs  mod.rs  terrain.rs  transform.rs
core/game/src/render/: game_render_pass.rs  mod.rs  terrain.rs  terrain_render_pass.rs
core/resources/: Cargo.toml
core/resources/src/: manager.rs  resource.rs
core/resources/src/types/: material.rs  mod.rs  model.rs  shader.rs  (+1 more)
core/wrappers/math/: Cargo.toml
crates/core/game/: Cargo.toml
crates/game/: Cargo.toml
crates/game/src/: game.rs  lib.rs
crates/game/src/components/: mesh_component.rs  mod.rs
crates/game/src/examples/: mod.rs
crates/game/src/examples/custom_forward_render/: custom_material.rs  custom_pipeline.rs  custom_renderpass.rs  custom_ssbo.rs  mod.rs
crates/game/src/examples/display_texture/: component.rs  feature.rs  mod.rs  test_feature.rs
crates/game/src/examples/pbr_batches/: mod.rs
crates/game/src/features/: mesh_feature.rs
crates/game/src/game/: marching_cubes.rs  marching_cubes_patterns.rs  mc_compute_core.rs  mc_compute_pipeline.rs  mc_render_core.rs  mc_render_pipeline.rs  mod.rs  old_mc.rs  physics.rs  scene.rs
crates/game/src/game/terrain/: mc_chunk.rs  mc_compute_main.rs  mod.rs
crates/game/src/game/terrain/generate/: compute_core.rs  compute_pipeline.rs  mod.rs
crates/game/src/game/terrain/process/: mod.rs  process_chunks.rs
crates/game/src/game/terrain/render/: mc_compute_core.rs  mc_compute_pipeline.rs  mc_render_core.rs  mc_render_pipeline.rs  mod.rs  render_core.rs  render_pipeline.rs
crates/game/src/game/terrain/spawn/: compute_core.rs  compute_pipeline.rs  mod.rs  spawner.rs
crates/game/src/renderer/: mod.rs
crates/game/src/renderer/core/: render_assets.rs  render_multithread.rs  window.rs
crates/game/src/renderer/features/: camera_feature.rs  test_feature.rs
crates/game/src/renderer/render/: extract_macros.rs  mod.rs  pipeline_manager.rs  pipelines.rs  render_manager.rs
crates/game/src/scene/components/: camera_component.rs  mod.rs  test_component.rs  transform_component.rs
crates/game/src/scene/resources/: mesh.rs  mod.rs  shader.rs  texture.rs
crates/game/src/scene/tile_system/: old.rs
crates/game/src/test_render/: mod.rs  test_component.rs  test_feature.rs
crates/render/: Cargo.toml
crates/render/src/: lib.rs
crates/wgpu/: Cargo.toml
crates/wgpu/src/: bind_group.rs  buffer.rs  command_buffer.rs  compute_pass.rs  compute_pipeline.rs  instance.rs  render_pass.rs  render_pipeline.rs  texture.rs  vertex.rs
editor/: .eslintrc.cjs  .gitignore  .prettierrc  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  webpack.config.js
editor/client/: App.tsx  index.tsx
editor/public/: bundle.js  index.html
editor/src/: App.tsx  app.ts  index.css  index.ts  main.tsx
editor/src/lib/: Ipc.ts
editor_old/: package-lock.json  package.json
editor_old/src/: app.js
engine/: .gitignore  Cargo.toml  README.md  build.rs  tracing.json
engine/core/core/ecs/: Cargo.toml
engine/core/core/ecs/src/: component.rs  entity.rs  world.rs
engine/core/core/ecs/src/components/: camera.rs  label.rs  mod.rs  render.rs  transform.rs
engine/core/core/editor/src/: editor_handler.rs  ipc.rs  lib.rs  shared_memory.rs
engine/core/core/wgpu/src/: buffer.rs  instance.rs  lib.rs  render_pass.rs  render_pipeline.rs  texture.rs  window.rs
engine/core/game/: Cargo.toml
engine/core/game/src/: app.rs  lib.rs  renderer.rs  scene.rs
engine/core/resources/: Cargo.toml
engine/core/resources/src/: lib.rs  manager.rs  resource.rs
engine/core/resources/src/types/: material.rs  mod.rs  model.rs  shader.rs
engine/core/wrappers/editor/: Cargo.toml
engine/core/wrappers/editor/src/: editor_handler.rs  ipc.rs  shared_memory.rs
engine/core/wrappers/logger/: Cargo.toml
engine/core/wrappers/logger/src/: lib.rs  log.rs  subscriber.rs  throw.rs  tracer.rs
engine/core/wrappers/math/: Cargo.toml
engine/core/wrappers/math/src/: algrebra.rs  lib.rs  tuple.rs
engine/res/compute/: record_draw_commands.comp.wgsl  record_draw_commands.json  record_draw_commands.wgsl  record_draw_instructions.comp.wgsl  sort.comp.wgsl  sort.json
engine/res/desc/: material.json  model.json  shader.json
engine/res/materials/: unicolor.json
engine/res/shaders/: frag.wgsl  vertex.wgsl
engine/res/shaders/unicolor/: frag.json  vert.json
engine/src/: main.rs
res/compute/: record_draw_commands.comp.wgsl  record_draw_commands.json  record_draw_instructions.json  sort_batches.comp.wgsl  sort_batches.json
res/desc/: asset.json  model.json  shader.json  texture.json
res/examples/custom_forward_render/: frag.wgsl  vert.wgsl
res/examples/display_texture/: frag.wgsl  vert.wgsl
res/gizmo/: frag.wgsl  vert.wgsl
res/marching-cubes/: marching_cube.comp.wgsl  render.frag.wgsl  render.vert.wgsl  spawn_terrain.comp.wgsl
res/materials/: unicolor.json
res/mesh/: frag.wgsl  vert.wgsl
res/models/: cube.json  lost_empire.json  monkey.json
res/pbr/: frag.wgsl  gbuffer_frag.wgsl  gbuffer_vert.wgsl  lighting_frag.wgsl  lighting_vert.wgsl
res/shaders/editor/: editor_core.wgsl
res/shaders/terrain/: frag.json  frag.wgsl  vert.json  vert.wgsl
res/test/: test.frag.wgsl
res/texture/: terrain_heightmap.json  terrain_texture.json
src/: Cargo.toml  build.rs  main.rs
src/src/: main.rs
(+86 files in other folders)
