[package]
name = "wde-game"
version = "0.1.0"
edition = "2021"
description = "Core game logic for WaterDropEngine."

[profile.dev]
opt-level = 0

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
incremental = false
debug = false

[dependencies]
wde-render = { path = "../render" }
wde-wgpu = { path = "../wgpu" }

[dependencies.bevy]
version = "0.14"
default-features = false
features = [
    "multi_threaded",
    "bevy_asset",
    "bevy_winit",
]

[features]
default = []
watch = ["bevy/file_watcher", "wde-render/watch"]
trace = ["bevy/trace_tracy_memory", "wde-render/trace"]
