[package]
name = "wde_ecs"
version = "0.1.0"
authors = ["MecanicaScience"]
edition = "2021"
description = "ECS implementation"

[dependencies]
wde_resources = { path = "../../resources" }
wde_logger = { path = "../../wrappers/logger" }
wde_math = { path = "../../wrappers/math" }
bytemuck = { version = "1.12", features = [ "derive" ] }
tracing = { version = "0.1", features = ["max_level_trace", "release_max_level_info"] }
bit-vec = "0.6"
bit-set = "0.5"
