[package]
name = "wde_editor"
version = "0.1.0"
authors = ["MecanicaScience"]
edition = "2021"
description = "Game engine editor."

[dependencies]
tracing = { version = "0.1", features = ["max_level_trace", "release_max_level_info"] }
egui = "0.26"
egui-winit = "0.26"
egui_dock = "0.11"
egui_extras = "0.26"

[features]
default = []
editor = []
