[package]
name = "wde_game"
version = "0.1.0"
authors = ["MecanicaScience"]
edition = "2021"
description = "The game root crate"

[dependencies]
wde_ecs = { path = "../core/ecs" }
wde_resources = { path = "../resources" }
wde_wgpu = { path = "../third_party/wgpu" }
wde_editor_interactions = { path = "../third_party/editor" }
wde_logger = { path = "../wrappers/logger" }
wde_math = { path = "../wrappers/math" }
tracing = { version = "0.1", features = ["max_level_trace", "release_max_level_info"] }
rand = "0.8"
tokio = { version = "1.35", features = ["rt", "macros", "sync"] }
bytemuck = { version = "1.12", features = [ "derive" ] }
