[package]
name = "wde_resources"
version = "0.1.0"
authors = ["MecanicaScience"]
edition = "2021"
description = "Game engine resources manager."

[dependencies]
wde_wgpu = { path = "../third_party/wgpu" }
wde_logger = { path = "../wrappers/logger" }
wde_math = { path = "../wrappers/math" }
tracing = { version = "0.1", features = ["max_level_trace", "release_max_level_info"] }
tokio = { version = "1.35", features = ["rt", "macros", "fs", "io-util", "time"] }
bytemuck = { version = "1.14", features = [ "derive" ] }
tobj = "4.0"
