[package]
name = "wde_logger"
version = "0.1.0"
authors = ["MecanicaScience"]
edition = "2021"
description = "Implements a logging system"

[dependencies]
tokio = { version = "1.35", features = ["rt", "macros", "fs"] }
tracing = { version = "0.1", features = ["max_level_trace", "release_max_level_info"] }
tracing-subscriber = "0.3"
serde_json = "1.0"
regex = "1.10"
